[gd_scene load_steps=25 format=2]

[ext_resource path="res://Robot/Control_Panel.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/sensor_frame.jpg" type="Texture" id=2]
[ext_resource path="res://Sensors/Sensor_HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/Born2bSportyV2.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_8.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_10.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_3.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_6.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_12.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_15.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_7.png" type="Texture" id=13]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_0.png" type="Texture" id=14]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_14.png" type="Texture" id=15]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_5.png" type="Texture" id=16]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_9.png" type="Texture" id=17]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_11.png" type="Texture" id=18]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_4.png" type="Texture" id=19]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_13.png" type="Texture" id=20]
[ext_resource path="res://Assets/Textures/stone.png" type="Texture" id=21]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 334, 212 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 17 ), ExtResource( 6 ), ExtResource( 18 ), ExtResource( 11 ), ExtResource( 20 ), ExtResource( 15 ), ExtResource( 12 ) ],
"loop": false,
"name": "reveal",
"speed": 18.0
} ]

[node name="ControlPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Background" type="ColorRect" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.203922, 0.196078, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -260.0
margin_right = 500.0
margin_bottom = 260.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="MarginContainer/Panel/MarginContainer"]
margin_right = 1000.0
margin_bottom = 520.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer/Panel/MarginContainer/GridContainer"]
margin_right = 495.0
margin_bottom = 255.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 8.0
margin_right = -15.0
margin_bottom = -7.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD1" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel/MarginContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 470.0
margin_bottom = 240.0

[node name="Panel2" type="Panel" parent="MarginContainer/Panel/MarginContainer/GridContainer"]
margin_left = 505.0
margin_right = 1000.0
margin_bottom = 255.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 8.0
margin_right = -15.0
margin_bottom = -7.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD2" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel2/MarginContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 470.0
margin_bottom = 240.0

[node name="Panel3" type="Panel" parent="MarginContainer/Panel/MarginContainer/GridContainer"]
margin_top = 265.0
margin_right = 495.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 8.0
margin_right = -15.0
margin_bottom = -7.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD3" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel3/MarginContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 470.0
margin_bottom = 240.0

[node name="Texture_info" type="Label" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel3/MarginContainer/HUD3"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 70.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Texture info"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel3/MarginContainer/HUD3"]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.95
rect_min_size = Vector2( 100, 100 )
stretch_mode = 1
alignment_horizontal = 0

[node name="Texture_display" type="TextureRect" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel3/MarginContainer/HUD3/AspectRatioContainer"]
margin_right = 204.0
margin_bottom = 204.0
texture = ExtResource( 21 )
expand = true
stretch_mode = 1

[node name="Whisker_animation" type="AnimatedSprite" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel3/MarginContainer/HUD3/AspectRatioContainer/Texture_display"]
position = Vector2( 102, 102 )
scale = Vector2( 0.41, 0.41 )
frames = SubResource( 3 )
animation = "idle"

[node name="ColorRect" type="ColorRect" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel3/MarginContainer/HUD3"]
margin_left = 254.95
margin_top = 24.3137
margin_right = 274.95
margin_bottom = 44.3137
color = Color( 0.168627, 0.619608, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel3/MarginContainer/HUD3"]
margin_left = 286.95
margin_top = 24.3137
margin_right = 306.95
margin_bottom = 44.3137
color = Color( 0.168627, 0.619608, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel3/MarginContainer/HUD3"]
margin_left = 318.95
margin_top = 24.3137
margin_right = 338.95
margin_bottom = 44.3137
color = Color( 0.168627, 0.619608, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel3/MarginContainer/HUD3"]
margin_left = 350.95
margin_top = 24.3137
margin_right = 370.95
margin_bottom = 44.3137
color = Color( 0.168627, 0.619608, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel3/MarginContainer/HUD3"]
margin_left = 382.95
margin_top = 24.3137
margin_right = 402.95
margin_bottom = 44.3137
color = Color( 0.168627, 0.619608, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect6" type="ColorRect" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel3/MarginContainer/HUD3"]
margin_left = 414.95
margin_top = 24.3137
margin_right = 434.95
margin_bottom = 44.3137
color = Color( 0.168627, 0.619608, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="Panel" parent="MarginContainer/Panel/MarginContainer/GridContainer"]
margin_left = 505.0
margin_top = 265.0
margin_right = 1000.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 8.0
margin_right = -15.0
margin_bottom = -7.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD4" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel4/MarginContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 470.0
margin_bottom = 240.0

[node name="DebugTools" type="Control" parent="MarginContainer/Panel"]
margin_left = 816.858
margin_top = 0.709229
margin_right = 1020.86
margin_bottom = 42.7092
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="MarginContainer/Panel/DebugTools"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -219.0
margin_top = -20.0
margin_bottom = 20.0
pressed = true
action_mode = 0
keep_pressed_outside = true
text = "Toggle Background"
align = 1
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleHuds" type="CheckButton" parent="MarginContainer/Panel/DebugTools"]
margin_left = -166.598
margin_top = 0.8909
margin_right = -11.5984
margin_bottom = 40.8909
pressed = true
text = "Toggle HUD"

[connection signal="animation_finished" from="MarginContainer/Panel/MarginContainer/GridContainer/Panel3/MarginContainer/HUD3/AspectRatioContainer/Texture_display/Whisker_animation" to="." method="_on_Whisker_animation_animation_finished"]
[connection signal="pressed" from="MarginContainer/Panel/DebugTools/CheckButton" to="." method="_on_toggle_background_button"]
[connection signal="toggled" from="MarginContainer/Panel/DebugTools/CheckButton" to="." method="_on_toggle_background_button"]
[connection signal="toggled" from="MarginContainer/Panel/DebugTools/ToggleHuds" to="." method="_on_ToggleHuds_toggled"]
